--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 
     <!-- Link to your custom stylesheet -->
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="icon" type="image/png" href="favicon.png" />
   </head>
   <body>
     <div id="root"></div>
